# zep-graphiti

examples/neo4j_otel/: .env.example  README.md  agent_conversation_full_trace.ipynb  data_flow.md  data_flow_mem0.md  data_flow_relational.md  demo_output.txt  graphiti_neo4j_otel_demo.ipynb  pyproject.toml  trace_raw.jsonl
graphiti_core/: graphiti.py
graphiti_core/utils/maintenance/: edge_operations.py
