[project]
name = "graphiti-neo4j-otel-demo"
version = "0.1.0"
description = "Jupyter notebook demo for Graphiti + Neo4j + OpenTelemetry tracing"
requires-python = ">=3.10"
dependencies = [
    "graphiti-core",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "python-dotenv>=1.0.1",
    "jupyterlab>=4.2.0",
    "ipykernel>=6.29.0",
    "sentence-transformers>=3.0.0",
    "google-genai>=1.0.0",
    "vllm>=0.15.0",
]

[tool.uv.sources]
graphiti-core = { path = "../..", editable = true }

